tests/ui/import_warnings.fail.stderr
error: make it fail so we can check the warnings
  --> tests/ui/import_warnings.fail.rs:14:5
   |
14 |     compile_error!("make it fail so we can check the warnings")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `z`
 --> tests/ui/import_warnings.fail.rs:7:18
  |
7 |     extern crate z; // this should have warning since z is never used
  |                  ^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `x`
 --> tests/ui/import_warnings.fail.rs:6:18
  |
6 |     #[depends_on(x)]
  |                  ^
